--- a/resumen.tex
+++ b/resumen.tex
@@ -3,14 +3,11 @@
 
 \vspace{1cm}
 
-% Aquí puedes agregar el resumen de tu proyecto
-% Ejemplo de estructura:
-
 El presente documento describe el desarrollo del proyecto \textbf{Irakani Builder}, realizado durante el periodo de residencias profesionales en la empresa ITERADAPTA (Irakani).
 
 \vspace{0.5cm}
 
-Irakani Builder es una plataforma innovadora que permite la creación de aplicaciones web de manera visual e intuitiva, sin necesidad de conocimientos avanzados de programación. El sistema integra un editor visual, gestión de bases de datos, generación automática de código y múltiples herramientas que facilitan el desarrollo de aplicaciones empresariales.
+Irakani Builder es una plataforma innovadora que permite la creación de aplicaciones de manera visual e intuitiva, sin necesidad de conocimientos avanzados de programación. El sistema integra un editor visual, gestión de bases de datos, generación automática de código y múltiples herramientas que facilitan el desarrollo de aplicaciones empresariales.
 
 \vspace{0.5cm}
 
